Fixed alignment of searchbar

--- a/bitvault/src/index.css
+++ b/bitvault/src/index.css
@@ -10,8 +10,8 @@
 }
 
 .primary-exit {
-    padding-left: 200px;
-    color: #94aeb3;
+    left: 150px;
+    color: #c2cdcf;
 }
 
 .primary-exit:hover {
